Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
0.24
-
None
Description
Due to QPID-4692, it is possible to set limits on queue created by an owner via ACL. But there is no way of checking the current limit.
The easiest way of doing so is to add to QMF queue object userId, that is the queue owner / creator.
How reproducible:
100%
Steps to Reproduce:
qpid-send -a "testQueue;
" --connection-options="
{sasl-mechanism:'PLAIN', username:guest, password:guest}"
(try to check anywhere that "guest@QPID" owns/created the queue)
Actual results:
No way to see it.
Expected results:
E.g. qpid-tool -> show <queue_ID> should provide that information
Additional info: