QPID-5587: QMF to track queue owner (userId)

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1572963 13f79535-47bb-0310-9956-ffa450edef68